--- a/emd_msgs/CMakeLists.txt
+++ b/emd_msgs/CMakeLists.txt
@@ -39,6 +39,8 @@ rosidl_generate_interfaces( ${PROJECT_NAME}
   visualization_msgs
 )
 
+ament_export_dependencies(rosidl_default_runtime)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
