--- a/emd_msgs/package.xml
+++ b/emd_msgs/package.xml
@@ -14,6 +14,11 @@
 
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>shape_msgs</depend>
+  <depend>visualization_msgs</depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
