--- a/easy_manipulation_deployment/emd_grasp_execution/CMakeLists.txt
+++ b/easy_manipulation_deployment/emd_grasp_execution/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(yaml_cpp_vendor REQUIRED)
+find_package(trajectory_msgs REQUIRED)
 
 include_directories(
   PUBLIC
@@ -43,6 +44,7 @@ ament_target_dependencies(grasp_execution_interface
   tf2
   tf2_ros
   tf2_geometry_msgs
+  trajectory_msgs
   pluginlib
   yaml_cpp_vendor
 )
@@ -58,6 +60,7 @@ target_link_libraries(moveit_cpp_grasp_execution_interface
 
 ament_target_dependencies(moveit_cpp_grasp_execution_interface
   moveit_ros_planning_interface
+  trajectory_msgs
   #  yaml_cpp_vendor
 )
 
@@ -91,6 +94,7 @@ ament_export_dependencies(
   emd_msgs
   tf2
   tf2_ros
+  trajectory_msgs
   yaml_cpp_vendor
   tinyxml2_vendor
 )
