--- a/easy_manipulation_deployment/emd_grasp_planner/package.xml
+++ b/easy_manipulation_deployment/emd_grasp_planner/package.xml
@@ -15,6 +15,7 @@
   <depend>geometry_msgs</depend>
   <depend>shape_msgs</depend>
   <depend>emd_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
