--- a/easy_manipulation_deployment/emd_waypoint_execution/package.xml
+++ b/easy_manipulation_deployment/emd_waypoint_execution/package.xml
@@ -11,6 +11,9 @@
 
   <depend>rclcpp</depend>
   <depend>emd_grasp_execution</depend>
+  <depend>geometry_msgs</depend>
+  <depend>jsoncpp</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
