--- a/easy_manipulation_deployment/emd_dynamic_safety/package.xml
+++ b/easy_manipulation_deployment/emd_dynamic_safety/package.xml
@@ -17,6 +17,7 @@
   <depend>realtime_tools</depend>
   <depend>pluginlib</depend>
   <depend>joint_trajectory_controller</depend>
+  <depend>angles</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
