--- a/easy_manipulation_deployment/emd_grasp_planner/package.xml
+++ b/easy_manipulation_deployment/emd_grasp_planner/package.xml
@@ -31,6 +31,7 @@
   <build_depend>tf2</build_depend>
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
