--- a/scenes/suction_test/package.xml
+++ b/scenes/suction_test/package.xml
@@ -5,7 +5,7 @@
   <version>2.0.0</version>
   <description>suction_test description</description>
   <maintainer email="example@gmail.com">name</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
