Add waypoint parser tests

--- a/easy_manipulation_deployment/emd_waypoint_execution/CMakeLists.txt
+++ b/easy_manipulation_deployment/emd_waypoint_execution/CMakeLists.txt
@@ -14,48 +14,53 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(jsoncpp CONFIG REQUIRED)
-find_package(emd_grasp_execution REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+
+option(BUILD_WAYPOINT_EXECUTION_INTERFACE "Build waypoint execution interface" ON)
+if(BUILD_WAYPOINT_EXECUTION_INTERFACE)
+  find_package(emd_grasp_execution REQUIRED)
+endif()
 
 include_directories(
   PUBLIC
   include
 )
 
-add_library(waypoint_execution_interface
-  SHARED
-  src/waypoint_parser.cpp
-)
+if(BUILD_WAYPOINT_EXECUTION_INTERFACE)
+  add_library(waypoint_execution_interface
+    SHARED
+    src/waypoint_parser.cpp)
 
-ament_target_dependencies(waypoint_execution_interface
-  emd_grasp_execution
-  rclcpp
-  geometry_msgs
-  tf2_geometry_msgs)
+  ament_target_dependencies(waypoint_execution_interface
+    emd_grasp_execution
+    rclcpp
+    geometry_msgs
+    tf2_geometry_msgs)
 
-target_link_libraries(waypoint_execution_interface
-  jsoncpp_lib
-)
+  target_link_libraries(waypoint_execution_interface
+    jsoncpp_lib)
 
-install(
-  DIRECTORY include/
-  DESTINATION include
-)
+  install(
+    DIRECTORY include/
+    DESTINATION include)
 
-install(
-  TARGETS waypoint_execution_interface
-  EXPORT export_waypoint_execution_interface
-  RUNTIME DESTINATION bin
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  INCLUDES DESTINATION include)
+  install(
+    TARGETS waypoint_execution_interface
+    EXPORT export_waypoint_execution_interface
+    RUNTIME DESTINATION bin
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    INCLUDES DESTINATION include)
 
-ament_export_include_directories(
-  include
-)
+  ament_export_include_directories(include)
+  ament_export_libraries(waypoint_execution_interface)
+  ament_export_targets(export_waypoint_execution_interface HAS_LIBRARY_TARGET)
+  ament_export_dependencies(jsoncpp tf2_geometry_msgs)
+endif()
 
-ament_export_libraries(waypoint_execution_interface)
-ament_export_targets(export_waypoint_execution_interface HAS_LIBRARY_TARGET)
-ament_export_dependencies(jsoncpp tf2_geometry_msgs)
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+  add_subdirectory(test)
+endif()
 ament_package()
