--- a/easy_manipulation_deployment/emd_grasp_execution/test/unit/CMakeLists.txt
+++ b/easy_manipulation_deployment/emd_grasp_execution/test/unit/CMakeLists.txt
@@ -5,7 +5,7 @@ ament_add_gtest(test_scheduler
 )
 target_link_libraries(test_scheduler
   grasp_execution_interface
-  yaml-cpp::yaml-cpp
+  yaml-cpp
 )
 target_include_directories(test_scheduler
   SYSTEM PRIVATE ${YAML_CPP_INCLUDE_DIRS}
