Fix scene and gripper configs

--- a/scenes/ur5_3f_test/CMakeLists.txt
+++ b/scenes/ur5_3f_test/CMakeLists.txt
@@ -13,6 +13,12 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_runtime REQUIRED)
+find_package(ur_description REQUIRED)
+find_package(ur5_moveit_config REQUIRED)
+find_package(robotiq_3f_gripper_description REQUIRED)
+find_package(robotiq_3f_moveit_config REQUIRED)
+find_package(realsense2_description REQUIRED)
+find_package(table_description REQUIRED)
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
@@ -20,4 +26,11 @@ install(DIRECTORY launch
 install(DIRECTORY urdf
   DESTINATION share/${PROJECT_NAME}
 )
+ament_export_dependencies(
+  ur_description
+  ur5_moveit_config
+  robotiq_3f_gripper_description
+  robotiq_3f_moveit_config
+  realsense2_description
+  table_description)
 ament_package()
