--- a/scenes/ur5_airpick4_test/package.xml
+++ b/scenes/ur5_airpick4_test/package.xml
@@ -9,6 +9,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <exec_depend>ur_description</exec_depend>
+  <exec_depend>ur5_moveit_config</exec_depend>
+  <exec_depend>onrobot_airpick4_description</exec_depend>
+  <exec_depend>onrobot_airpick4_moveit_config</exec_depend>
+  <exec_depend>realsense2_description</exec_depend>
+  <exec_depend>table_description</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
